[package]
name = "marketplace"
version = "0.0.1"
authors = ["Hoanm <https://github.com/hoanm>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.13.0
"""

[dependencies]
cosmwasm-std = "1.1.9"
cosmwasm-storage = "1.1.9"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
thiserror = { version = "1.0.37" }
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
serde_json = "1.0.89"
cw-utils = "1.0.0"
cosmwasm-schema = "1.1.9"
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }
semver = "1"

[dev-dependencies]
cw-multi-test = "0.17.0"
